# ShiftScheduler

./: .gitignore  Playground.ipynb  README.md  docker-compose.yaml  requirements.txt  requirments.txt  run_servers.py  school-timetabling-quickstart.ipynb
OR-tools/: Playground.ipynb
ta-scheduler-ortools/: README.MD  pyproject.toml
ta-scheduler-ortools/data/Example-1/availability/: availability_Sara.xlsx
ta-scheduler-ortools/data/schedules/: ta_schedule_report_timeseries.csv
ta-scheduler-ortools/notebook/: Playground.ipynb
ta-scheduler-ortools/notebook/outputs/: ta_schedule_report.csv  ta_schedule_report_timeseries.csv
ta-scheduler-ortools/src/ortools_scheduler/: domain.py  main.py  solver.py  utils.py
ta-scheduler-ortools/tests/: package_test.py  test_solver_logic.py
ta-scheduler-simple/: pyproject.toml
ta-scheduler-simple/doc/: uuid.ipynb
ta-scheduler-simple/src/ta_scheduler_simple/: constraints.py  main.py  myscript.py
ta-scheduler-timefold/: README.adoc  README.md  notes.txt  pyproject.toml
ta-scheduler-timefold/configs/: benchmark_config.json  benchmark_config.yaml  solver_config.xml  solver_note.txt
ta-scheduler-timefold/data/: availability_Template.xlsx
ta-scheduler-timefold/data/1/: shift_list.csv  ta_list.csv
ta-scheduler-timefold/data/3CL4-WINTER25/: availability_Template_3CL4.xlsx  shift_list.csv  ta_list.csv
ta-scheduler-timefold/data/course-1/availability/: availability_Danial.xlsx
ta-scheduler-timefold/data/course-2/: shift_list.csv
ta-scheduler-timefold/src/hello_world/: __init__.py  benchmark.py  constraint_verifier.py  constraints.py  demo_data.py  domain.py  main.py  solver.py  solver_config.xml  utils.py
ta-scheduler-timefold/tests/: test_2DX3_2026.ipynb  test_constraints.py  test_data_constructor.py  test_feasible.py  test_jpype.py
ta-scheduling-webapp/: pyproject.toml
ta-scheduling-webapp/data/Forms/: employeeAvailabilityForm_Template.xlsx  ~$employeeAvailabilityForm_Template.xlsx
ta-scheduling-webapp/src/employee_scheduling/: ProcessData.py  __init__.py  constraints.py  demo_data.py  domain.py  rest_api.py  solver.py  utils.py
ta-scheduling-webapp/tests/: test_constraints.py  test_feasible.py
(+68 files in other folders)
