[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ortools_scheduler"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    'pytest == 8.2.2',
    'openpyxl==3.1.5',
    'ortools==9.11.4210',
    'pandas==2.2.3'
]


[project.scripts]
roster-tas = "ortools_scheduler:main"