[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "employee_scheduling"
description = "A simple employee scheduling application"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    'timefold == 1.17.0b0',
    'fastapi == 0.111.0',
    'pydantic == 2.7.3',
    'uvicorn == 0.30.1',
    'pytest == 8.2.2',
    'openpyxl == 3.1.5',
    'pandas == 2.2.3'
]


[project.scripts]
run-app = "employee_scheduling:main"
